--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,8 +1,9 @@
 # En /admin/.htaccess
+
 <FilesMatch "\.(php)$">
-    Require all denied
+Require all denied
 </FilesMatch>
 
-<FilesMatch "(indexAdmin\.php|VerDocumentos\.php|categoria\.php|usuarios\.php)">
-    Require all granted
+<FilesMatch "(indexAdmin\.php|VerDocumentos\.php|categoria\.php|usuarios\.php|cambiar_estado\.php|subir_documento\.php|upload\.php|update_documento\.php)">
+Require all granted
 </FilesMatch>
