Enhance file upload process with improved validation and error handling; add confirmation page access

--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -4,6 +4,6 @@
 Require all denied
 </FilesMatch>
 
-<FilesMatch "(indexAdmin\.php|VerDocumentos\.php|categoria\.php|usuarios\.php|cambiar_estado\.php|subir_documento\.php|upload\.php|update_documento\.php)">
+<FilesMatch "(indexAdmin\.php|VerDocumentos\.php|categoria\.php|usuarios\.php|cambiar_estado\.php|subir_documento\.php|upload\.php|update_documento\.php|confirmacion\.php)">
 Require all granted
 </FilesMatch>
