--- a/admin/.htaccess
+++ b/admin/.htaccess
@@ -1,9 +1,19 @@
 # En /admin/.htaccess
 
 <FilesMatch "\.(php)$">
-Require all denied
+    Require all denied
 </FilesMatch>
 
 <FilesMatch "(indexAdmin\.php|VerDocumentos\.php|categoria\.php|usuarios\.php|cambiar_estado\.php|subir_documento\.php|upload\.php|update_documento\.php|confirmacion\.php|editar_documento\.php)">
-Require all granted
+    Require all granted
+</FilesMatch>
+
+# public/uploads/.htaccess
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
+
+<FilesMatch "\.pdf$">
+    ForceType application/pdf
+    Header set Content-Disposition inline
 </FilesMatch>
